# pdf-contrast-filter

./: Makefile  README.md  config-examle.toml  pyproject.toml
pdf_gimp_filter/: __main__.py
