[tool.poetry]
name = "pdf-gimp-filter"
version = "0.1.0"
description = ""
authors = ["MoAI522 <urotanre522@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.8.5"
pdf2image = "^1.16.0"
opencv-python = "^4.5.5"
img2pdf = "^0.4.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
